--- a/neljasViikko/blog/package.json
+++ b/neljasViikko/blog/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongodb": "^3.0.1",
-    "mongoose": "^4.13.8"
+    "mongoose": "^4.13.8",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.14.3"
